# scholar-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.flashrank_cache/__MACOSX/ms-marco-MiniLM-L-12-v2/: ._config.json  ._special_tokens_map.json  ._tokenizer.json  ._tokenizer_config.json
.flashrank_cache/ms-marco-MiniLM-L-12-v2/: tokenizer_config.json
.github/workflows/: ci.yml
configs/: settings.py
notebooks/: 1_ingest_and_test.ipynb  2_basic_rag_test.ipynb  5_ragas_evaluation.ipynb
scripts/: ingest.py
src/data_processing/: downloader.py  ingestion.py
src/rag_pipeline/: core.py
src/scholar_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: logging_config.py
tests/: test_data_ingestion.py  test_placeholder.py  test_rag_pipeline.py
