[project]
name = "scholar-agent"
version = "0.1.0"
description = "An agentic AI system for reasoning over a corpus of scientific papers."
authors = [{ name = "Ishi", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
# Set the maximum line length
line-length = 88

[tool.ruff.lint]
# Select the rules to enforce
select = ["E", "F", "W", "I"]

# E = pycodestyle errors
# F = pyflakes errors
# W = pycodestyle warnings
# I = isort (import sorting)
